<resources>
    <string name="app_name">Popcorn</string>
    <string name="log_in_and_find_your_favorite_movies_and_series">Log in and find your favorite movies and series</string>
    <string name="i_already_have_my_account">I already have my account</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="not_now">Not now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="type_your_password">Type your password</string>
    <string name="type_your_email">Type your e mail</string>
    <string name="login_with_email">Login with email</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="or_login_with">Or login with</string>
    <string name="sign_up_and_find_your_favorite_movies_and_series">Sign up and find your favorite movies and series</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up">Sign up</string>
    <string name="failed_to_register">Failed to register</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="night_mode">Night mode</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="this_user_is_not_registered">This user is not registered</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="tap_to_change_username">Tap to change username</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="github">Github</string>
    <string name="the_movie_db_info">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="version">version %s</string>
    <string name="the_movie_database">The Movie Database</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="treding_this_week">Trending this week</string>
    <string name="popular_series">Popular TV series</string>
    <string name="popular_movies">Popular movies</string>
    <string name="my_favorites">My favorites</string>
    <string name="category_thumbnail">Category thumbnail</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="oops_an_error_has_ocurred">Oops, an error has occurred!</string>
    <string name="error">Error</string>
    <string name="details">Details</string>
    <string name="more_like_this">More like this</string>
    <string name="created_by">Created by: %s</string>
    <string name="first_air_date">First air date: %s</string>
    <string name="genres">Genres: %s</string>
    <string name="in_prodution">In prodution: %s</string>
    <string name="last_air_date">Last air date :%s</string>
    <string name="networks">Networks: %s</string>
    <string name="number_of_episodes">Number of episodes: %d</string>
    <string name="number_of_seasons">Number of seasons: %d</string>
    <string name="origin_country">Origin country: %s</string>
    <string name="overview">Overview: %s</string>
    <string name="production_companies">Production companies: %s</string>
    <string name="original_name">Original name: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="homepage">Homepage: %s</string>
    <string name="original_title">Original title: %s</string>
    <string name="release_date">Release date: %s</string>
    <string name="status">Status: %s</string>
    <string name="tagline">Tagline: %s</string>
    <string name="production_countries">Production countries: %s</string>
    <string name="now_playing">Now playing</string>
    <string name="playing_in_theaters">Playing in theaters</string>
    <string name="always_follow_covid_19_prevention_recommendations">Always follow COVID-19 prevention recommendations</string>
</resources>