<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.serieInfo.SerieDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_overview"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/text_original_name"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/original_name" />

        <TextView
            android:id="@+id/textGenres"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genres" />

        <TextView
            android:id="@+id/text_created_by"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_by" />

        <TextView
            android:id="@+id/text_number_of_episodes"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_episodes" />

        <TextView
            android:id="@+id/text_number_of_seasons"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_seasons" />

        <TextView
            android:id="@+id/text_first_air_date"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_air_date" />

        <TextView
            android:id="@+id/text_last_air_date"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_air_date" />

        <TextView
            android:id="@+id/text_in_prodution"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_prodution" />

        <TextView
            android:id="@+id/text_networks"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/networks" />

        <TextView
            android:id="@+id/text_origin_coutry"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origin_country" />

        <TextView
            android:id="@+id/text_production_companies"
            style="@style/TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/production_companies" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>