<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_baseline_brightness_3_24"
        android:key="pref_night_mode"
        android:title="@string/night_mode" />
    <Preference
        android:icon="@drawable/ic_baseline_edit_24"
        android:key="pref_edit_profile"
        android:title="@string/edit_profile" />
    <Preference
        android:icon="@drawable/ic_baseline_info_24"
        android:key="pref_about"
        android:title="@string/about" />
    <Preference
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:key="pref_logout"
        android:title="@string/logout" />

</androidx.preference.PreferenceScreen>