<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movieinfo.MovieDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/details_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/tagline" />

        <TextView
            android:id="@+id/text_original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/original_title" />

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/overview" />

        <TextView
            android:id="@+id/text_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/genres" />

        <TextView
            android:id="@+id/text_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/homepage" />

        <TextView
            android:id="@+id/text_production_companies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/production_companies" />

        <TextView
            android:id="@+id/text_production_countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/production_countries" />

        <TextView
            android:id="@+id/text_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/release_date" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>